--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-rich-editor",
+  "name": "@omerfycll/simple-rich-editor",
   "version": "1.0.0",
   "description": "A simple rich text editor for React applications",
   "main": "dist/index.js",
@@ -8,12 +8,16 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "test": "echo \"Error: no test specified\" && exit 1",
     "example": "vite",
-    "example:build": "vite build"
+    "example:build": "vite build",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "react",
@@ -21,7 +25,7 @@
     "editor",
     "contenteditable"
   ],
-  "author": "Your Name",
+  "author": "omerfycll",
   "license": "MIT",
   "peerDependencies": {
     "react": ">=16.8.0",
