--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "@omerfycll/simple-rich-editor",
-  "version": "1.0.2",
+  "version": "1.0.3n",
   "description": "A simple rich text editor for React applications",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/omerycll/sample-rich-editor.git"
+  },
+  "bugs": {
+    "url": "https://github.com/omerycll/sample-rich-editor/issues"
+  },
+  "homepage": "https://github.com/omerycll/sample-rich-editor#readme",
   "files": [
     "dist"
   ],
